# vaccel-python

./: .gitignore  .gitmodules  Makefile  NOTICE  README.md  User_Guide.md  build_ffi.py  builder.py  genop.py  image.py  image_genop.py  minmax.py  noop.py  profile.txt  pynq_array_copy.py  pynq_vector_add.py  pyproject.toml  run-examples.py  setup.cfg  setup.py  test.c  vaccel-0.5.0-Linux.deb  vaccel-0.5.0-Linux.deb.1
.github/workflows/: dispatch-prepare-release.yml  generate-api-reference.yml  generate_docs.yml  main-build-and-upload.yml  pr-build-and-verify.yml  pr-trailers.yml  pytest.yml
_docs/: Dockerfile  README.md  autogen.sh
examples/: classify.py
tests/: conftest.py  test_blas.py  test_config.py  test_exec.py  test_exec_many.py  test_fpga.py  test_general.py  test_genop.py  test_image.py  test_image_genop.py  test_minmax.py  test_pynq_ops.py  test_resource.py  test_sgemm.py  test_tf.py  test_tflite.py  test_torch.py  test_vaccel.py
vaccel/: __init__.py  _vaccel.c  arg.py  blas.py  config.py  error.py  exec.py  exec_many.py  fpga.py  genop.py  image.py  image_genop.py  minmax.py  noop.py  op.py  plugin.py  pynq_array_copy.py  pynq_parallel.py  pynq_vector_add.py  resource.py  session.py  sgemm.py  shared_object.py  tensorflow.py  test.py  tflite.py  torch.py  vaccel.py
vaccel.egg-info/: PKG-INFO  SOURCES.txt
vaccel/_c_types/: __init__.py  types.py  utils.py
vaccel_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vaccelpy/: __init__.py  common.py  exec_genop.py  exec_resource.py  genop.py  session.py  shared_object.py  vaccelarg.py
(+35 files in other folders)
